[tool.poetry]
name = "repl_python3_beta_310-L11-Cleaning-Data-Starter-1"
version = "0.1.0"
description = ""
authors = ["CharlesRobinso4 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.2"
statsmodels = "^0.12.2"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
